engine/baml-runtime/src/control_flow/snapshots/baml_runtime__control_flow__tests__headers__UnicodeHeaders@UnicodeHeaders.baml.snap
---
source: baml-runtime/src/control_flow/tests.rs
expression: snapshot_value
input_file: baml-runtime/src/control_flow/testdata/UnicodeHeaders.baml
---
hir: "Some(\n    Block {\n        statements: [\n            HeaderContextEnter(\n                HeaderContext {\n                    level: 1,\n                    title: \"你好世界\",\n                    span: Span {\n                        file: SourceFile { path: \"src/control_flow/testdata/UnicodeHeaders.baml\", contents: ... },\n                        start: 73,\n                        end: 89,\n                    },\n                },\n            ),\n            HeaderContextEnter(\n                HeaderContext {\n                    level: 2,\n                    title: \"Émojis 🎉🎊\",\n                    span: Span {\n                        file: SourceFile { path: \"src/control_flow/testdata/UnicodeHeaders.baml\", contents: ... },\n                        start: 122,\n                        end: 143,\n                    },\n                },\n            ),\n            HeaderContextEnter(\n                HeaderContext {\n                    level: 3,\n                    title: \"Special «Characters» ™\",\n                    span: Span {\n                        file: SourceFile { path: \"src/control_flow/testdata/UnicodeHeaders.baml\", contents: ... },\n                        start: 176,\n                        end: 208,\n                    },\n                },\n            ),\n        ],\n        trailing_expr: Some(\n            StringValue(\n                \"test\",\n                Span {\n                    file: SourceFile { path: \"src/control_flow/testdata/UnicodeHeaders.baml\", contents: ... },\n                    start: 214,\n                    end: 220,\n                },\n            ),\n        ),\n    },\n)"
expr:
  nodes:
    "UnicodeHeaders|root:0":
      label: UnicodeHeaders
      node_type: function
      parent: ~
      span:
        file: src/control_flow/testdata/UnicodeHeaders.baml
        start: 31
        end: 222
    "UnicodeHeaders|root:0|hdr:header-0:0":
      label: 你好世界
      node_type: header
      parent: "UnicodeHeaders|root:0"
      span:
        file: src/control_flow/testdata/UnicodeHeaders.baml
        start: 73
        end: 89
    "UnicodeHeaders|root:0|hdr:header-0:0|hdr:mojis:0":
      label: Émojis 🎉🎊
      node_type: header
      parent: "UnicodeHeaders|root:0|hdr:header-0:0"
      span:
        file: src/control_flow/testdata/UnicodeHeaders.baml
        start: 122
        end: 143
    "UnicodeHeaders|root:0|hdr:header-0:0|hdr:mojis:0|hdr:special-characters:0":
      label: Special «Characters» ™
      node_type: header
      parent: "UnicodeHeaders|root:0|hdr:header-0:0|hdr:mojis:0"
      span:
        file: src/control_flow/testdata/UnicodeHeaders.baml
        start: 176
        end: 208
  edges: {}
mermaid: "flowchart TD\nsubgraph n0[\"UnicodeHeaders\"]\n  direction TB\n  subgraph n1[\"你好世界\"]\n    direction TB\n    subgraph n2[\"Émojis 🎉🎊\"]\n      direction TB\n      n3[\"Special «Characters» ™\"]\n    end\n  end\nend\n"
