engine/baml-runtime/src/control_flow/snapshots/baml_runtime__control_flow__tests__headers__ai_content_pipeline.snap
---
source: baml-runtime/src/control_flow/tests.rs
expression: snapshots
---
__error:
  error: "error: Unknown function GetEmails\n  -->  src/control_flow/headers/ai_content_pipeline.baml:6\n   | \n 5 |     //## Retrieve Emails and Posts from Database\n 6 |     let emails = GetEmails();\n   | \nerror: Unknown function GetPosts\n  -->  src/control_flow/headers/ai_content_pipeline.baml:7\n   | \n 6 |     let emails = GetEmails();\n 7 |     let posts = GetPosts();\n   | \nerror: Unknown function ProcessVideo\n  -->  src/control_flow/headers/ai_content_pipeline.baml:10\n   | \n 9 |     //## Process and Load Video\n10 |     let processed = ProcessVideo(video_id, zoom_meeting_id);\n   | \nerror: Error validating: 'video' is a reserved keyword.\n  -->  src/control_flow/headers/ai_content_pipeline.baml:11\n   | \n10 |     let processed = ProcessVideo(video_id, zoom_meeting_id);\n11 |     let video = GetVideo(video_id);\n   | \nerror: Unknown function GetVideo\n  -->  src/control_flow/headers/ai_content_pipeline.baml:11\n   | \n10 |     let processed = ProcessVideo(video_id, zoom_meeting_id);\n11 |     let video = GetVideo(video_id);\n   | \nerror: Unknown function SummarizeVideo\n  -->  src/control_flow/headers/ai_content_pipeline.baml:21\n   | \n20 |         //#### Create Summary Text\n21 |         let s = SummarizeVideo(transcript, title);\n   | \nerror: Unknown function LabelSummaryCategory\n  -->  src/control_flow/headers/ai_content_pipeline.baml:24\n   | \n23 |         //#### Label Summary Category\n24 |         let category = LabelSummaryCategory(s);\n   | \nerror: Unknown function SaveSummary\n  -->  src/control_flow/headers/ai_content_pipeline.baml:27\n   | \n26 |         //### Save Summary\n27 |         let saved_summary = SaveSummary(video_id, s);\n   | \nerror: Unknown function GetStructure\n  -->  src/control_flow/headers/ai_content_pipeline.baml:40\n   | \n39 |         //### Get Content Type and Generate Draft\n40 |         let structure = GetStructure(kind);\n   | \nerror: Unknown function GenerateContent\n  -->  src/control_flow/headers/ai_content_pipeline.baml:41\n   | \n40 |         let structure = GetStructure(kind);\n41 |         let draft = GenerateContent(kind, video_id, summary);\n   | \nerror: Unknown function SaveDraft\n  -->  src/control_flow/headers/ai_content_pipeline.baml:44\n   | \n43 |         //### Save Draft\n44 |         let saved_draft = SaveDraft(video_id, draft);\n   | \nerror: Unknown function CreatePR\n  -->  src/control_flow/headers/ai_content_pipeline.baml:52\n   | \n51 |         //### Create GitHub PR\n52 |         let pr = CreatePR(video_id, summary);\n   | \nerror: Unknown variable pr_status\n  -->  src/control_flow/headers/ai_content_pipeline.baml:53\n   | \n52 |         let pr = CreatePR(video_id, summary);\n53 |         pr_status\n   | \nerror: Error validating: Unknown function GetEmails\n  -->  src/control_flow/headers/ai_content_pipeline.baml:6\n   | \n 5 |     //## Retrieve Emails and Posts from Database\n 6 |     let emails = GetEmails();\n   | \nerror: Error validating: Unknown function GetPosts\n  -->  src/control_flow/headers/ai_content_pipeline.baml:7\n   | \n 6 |     let emails = GetEmails();\n 7 |     let posts = GetPosts();\n   | \nerror: Error validating: Unknown function ProcessVideo\n  -->  src/control_flow/headers/ai_content_pipeline.baml:10\n   | \n 9 |     //## Process and Load Video\n10 |     let processed = ProcessVideo(video_id, zoom_meeting_id);\n   | \nerror: Error validating: Unknown function GetVideo\n  -->  src/control_flow/headers/ai_content_pipeline.baml:11\n   | \n10 |     let processed = ProcessVideo(video_id, zoom_meeting_id);\n11 |     let video = GetVideo(video_id);\n   | \nerror: Error validating: If condition must be boolean\n  -->  src/control_flow/headers/ai_content_pipeline.baml:17\n   | \n16 |     //## Video Summarization\n17 |     let summary = if (transcript) {\n   | \nerror: Error validating: Unknown function SummarizeVideo\n  -->  src/control_flow/headers/ai_content_pipeline.baml:21\n   | \n20 |         //#### Create Summary Text\n21 |         let s = SummarizeVideo(transcript, title);\n   | \nerror: Error validating: Unknown function LabelSummaryCategory\n  -->  src/control_flow/headers/ai_content_pipeline.baml:24\n   | \n23 |         //#### Label Summary Category\n24 |         let category = LabelSummaryCategory(s);\n   | \nerror: Error validating: Unknown function SaveSummary\n  -->  src/control_flow/headers/ai_content_pipeline.baml:27\n   | \n26 |         //### Save Summary\n27 |         let saved_summary = SaveSummary(video_id, s);\n   | \nerror: Error validating: Unknown function GetStructure\n  -->  src/control_flow/headers/ai_content_pipeline.baml:40\n   | \n39 |         //### Get Content Type and Generate Draft\n40 |         let structure = GetStructure(kind);\n   | \nerror: Error validating: Unknown function GenerateContent\n  -->  src/control_flow/headers/ai_content_pipeline.baml:41\n   | \n40 |         let structure = GetStructure(kind);\n41 |         let draft = GenerateContent(kind, video_id, summary);\n   | \nerror: Error validating: Unknown function SaveDraft\n  -->  src/control_flow/headers/ai_content_pipeline.baml:44\n   | \n43 |         //### Save Draft\n44 |         let saved_draft = SaveDraft(video_id, draft);\n   | \nerror: Error validating: If condition must be boolean\n  -->  src/control_flow/headers/ai_content_pipeline.baml:50\n   | \n49 |     //# Prepare Pull Request\n50 |     let pr_status = if (summary) {\n   | \nerror: Error validating: Unknown function CreatePR\n  -->  src/control_flow/headers/ai_content_pipeline.baml:52\n   | \n51 |         //### Create GitHub PR\n52 |         let pr = CreatePR(video_id, summary);\n   | \nerror: Error validating: Unknown variable pr_status\n  -->  src/control_flow/headers/ai_content_pipeline.baml:53\n   | \n52 |         let pr = CreatePR(video_id, summary);\n53 |         pr_status\n   | \n\nwarning: Workflow functions are experimental, and will break in the future.\n  -->  src/control_flow/headers/ai_content_pipeline.baml:2\n   | \n 1 | //# AI Content Pipeline\n 2 | function AIContentPipeline(video_id: string, zoom_meeting_id: string, transcript: string?, title: string?) -> string {\n   | \n\n"
