engine/baml-runtime/src/control_flow/snapshots/baml_runtime__control_flow__tests__headers__basic_if.snap
---
source: baml-runtime/src/control_flow/tests.rs
expression: snapshots
---
__error:
  error: "error: Error validating: Return type mismatch: function return type is string but got int\n  -->  src/control_flow/headers/basic_if.baml:15\n   | \n14 | \n15 |     z\n   | \n\nwarning: Workflow functions are experimental, and will break in the future.\n  -->  src/control_flow/headers/basic_if.baml:3\n   | \n 2 | //# Basic test\n 3 | function BasicIf() -> string {\n   | \n\n"
