engine/baml-runtime/src/control_flow/snapshots/baml_runtime__control_flow__tests__headers__complex_headers_test.snap
---
source: baml-runtime/src/control_flow/tests.rs
expression: snapshots
---
__error:
  error: "error: Error validating: Return type mismatch: function return type is string but got int\n  -->  src/control_flow/headers/complex_headers_test.baml:44\n   | \n43 |     //# Return Result\n44 |     final_result\n   | \n\nwarning: Workflow functions are experimental, and will break in the future.\n  -->  src/control_flow/headers/complex_headers_test.baml:3\n   | \n 2 | //# Main Function\n 3 | function ComplexHeaderTest() -> string {\n   | \nwarning: Workflow functions are experimental, and will break in the future.\n  -->  src/control_flow/headers/complex_headers_test.baml:48\n   | \n47 | //# Loop Processing\n48 | function ForLoopWithHeaders() -> int {\n   | \n\n"
