engine/baml-runtime/src/control_flow/snapshots/baml_runtime__control_flow__tests__headers__edge_cases.snap
---
source: baml-runtime/src/control_flow/tests.rs
expression: snapshots
---
__error:
  error: "error: Error validating: Return type mismatch: function return type is string but got int\n  -->  src/control_flow/headers/edge_cases.baml:132\n   | \n131 |     //# Final Section\n132 |     x\n   | \n\nwarning: Workflow functions are experimental, and will break in the future.\n  -->  src/control_flow/headers/edge_cases.baml:3\n   | \n 2 | \n 3 | function UnicodeHeaders() -> string {\n   | \nwarning: Workflow functions are experimental, and will break in the future.\n  -->  src/control_flow/headers/edge_cases.baml:15\n   | \n14 | \n15 | function HeaderLevels() -> string {\n   | \nwarning: Workflow functions are experimental, and will break in the future.\n  -->  src/control_flow/headers/edge_cases.baml:29\n   | \n28 | \n29 | function HeadersWithWhitespace() -> string {\n   | \nwarning: Workflow functions are experimental, and will break in the future.\n  -->  src/control_flow/headers/edge_cases.baml:42\n   | \n41 | \n42 | function HeadersAndComments() -> string {\n   | \nwarning: Workflow functions are experimental, and will break in the future.\n  -->  src/control_flow/headers/edge_cases.baml:57\n   | \n56 | \n57 | function HeadersInComplexNesting() -> string {\n   | \nwarning: Workflow functions are experimental, and will break in the future.\n  -->  src/control_flow/headers/edge_cases.baml:86\n   | \n85 | \n86 | function HeadersWithSpecialChars() -> string {\n   | \nwarning: Workflow functions are experimental, and will break in the future.\n  -->  src/control_flow/headers/edge_cases.baml:97\n   | \n96 | \n97 | function ConsecutiveHeaders() -> string {\n   | \nwarning: Workflow functions are experimental, and will break in the future.\n  -->  src/control_flow/headers/edge_cases.baml:109\n   | \n108 | \n109 | function HeadersAroundExpressions() -> string {\n   | \nwarning: Workflow functions are experimental, and will break in the future.\n  -->  src/control_flow/headers/edge_cases.baml:135\n   | \n134 | \n135 | function VeryLongHeaderTitle() -> string {\n   | \nwarning: Workflow functions are experimental, and will break in the future.\n  -->  src/control_flow/headers/edge_cases.baml:143\n   | \n142 | \n143 | function HeaderOnlyFunction() -> string {\n   | \n\n"
